--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "author": "Magnan Sylla",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5",
     "inquirer": "^9.2.15",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nanoid": "^5.0.6",
     "ora": "^8.0.1"
+  },
+  "bin": {
+    "todo": "index.js"
   }
 }
