--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/express-mongo
-```
+MONGO_URI=mongodb+srv://tasks:8A4HeBSKp5SF7Zdl@cluster0.vimtddo.mongodb.net/todos?retryWrites=true&w=majority
+    
+    ```
+
